# software_design_labs

./: README.md
lab2_developing_with_github/: main2.cpp
lab4/: person.cpp  personList.cpp
lab5_strategy_pattern/: select_and.cpp  select_and.hpp  select_contains.cpp  select_contains.hpp  select_not.cpp  select_not.hpp  select_or.cpp  select_or.hpp
lab6_CI/: CMakeLists.txt
lab6_CI/header/: rectangle.hpp  rectangle.hpp.gch
lab6_CI/src/: main.cpp  rectangle.cpp
lab6_CI/tests/: test.cpp
lab7_factory_pattern/: CMakeLists.txt  add.cpp  add.hpp  add_test.hpp  div.cpp  div.hpp  div_test.hpp  main.cpp  mult.cpp  mult.hpp  mult_test.hpp  pow.cpp  pow.hpp  pow_test.hpp  sub.cpp  sub.hpp  sub_test.hpp  treeMaker.cpp  treeMaker.hpp  treeMaker_test.hpp  unit_test.cpp
lab7_factory_pattern/lab-03---composite-pattern-alex-and-wanfang-akaat001-wli229-lab-03/: div_test.hpp  mult_test.hpp  pow_test.hpp  rand.hpp  rand_test.hpp  sub_test.hpp
lab8_visitor_pattern/: CMakeLists.txt  add.cpp  add.hpp  div.cpp  div.hpp  iterator.cpp  iterator.hpp  main.cpp  mult.cpp  mult.hpp  op.cpp  op.hpp  pow.cpp  pow.hpp  printLatexVisitor.cpp  printLatexVisitor.hpp  rand.cpp  rand.hpp  sub.cpp  sub.hpp  unit_test.cpp  visitor.hpp
software_design_lab3/lab3/: CMakeLists.txt  add.cpp  add.hpp  add_test.hpp  div.cpp  div.hpp  main.cpp  mult.cpp  mult.hpp  op.cpp  op.hpp  op_test.hpp  pow.cpp  pow.hpp  rand.cpp  sub.cpp  sub.hpp  unit_test.cpp
